# andjs

./: BUILD.gn  README.md  andjs_core.cc  andjs_core.h  andjs_core_quickjs.cc  andjs_core_quickjs.h  andjs_jni.cc  gin_java_bridge_object.cc  gin_java_bridge_object.h  gin_java_bridge_value_converter.cc  gin_java_bridge_value_converter.h  gin_java_function_invocation_helper.cc  gin_java_function_invocation_helper.h
.github/: FUNDING.yml
data/local/tmp/: quickjs-sample.js  v8-sample.js
java/: andjs_for_android.flags
java/src/com/github/wuruxu/andjs/: AndJS.java  CalledByJavascript.java
java/src/com/wuruxu/andjs/: AndJS.java  CalledByJavascript.java
patches/: BUILD.gn.patch  firebase_BUILD.gn.patch
sample_apk/: AndroidManifest.xml  README.md
sample_apk/java/res/layout/: activity_andjs_sample.xml
sample_apk/java/res/values-v17/: strings.xml
sample_apk/java/src/com/github/wuruxu/andjs/sample/: MainActivity.java  MyHome.java  MyObject.java
sample_apk/java/src/com/wuruxu/andjs/sample/: MainActivity.java  MyHome.java  MyObject.java
